# iscc-nbs-colors

./: .editorconfig  .gitignore  Cargo.toml  README.md  iscc-nbs.xml  iscc-nbs.xsd
doc/: color_name_charts.md
notebooks/: ISCC_NBS_renotations.ipynb  ISCC_NBS_renotations.py  colordb.py  munsell.py
src/: degree.rs  main.rs  munsell.rs
