[package]
name = "iscc-nbs-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
fontconfig = { version = "0.6.0", features = ["dlopen"] }
geo = "0.23.0"
geo-clipper = "0.7.3"
geo-types = "0.7.7"
interpolation = "0.2.0"
is_sorted = "0.1.1"
lazy_static = "1.4.0"
libm = "0.2.6"
palette = "0.6.1"
regex = "1.7.0"
roxmltree = "0.15.1"
ttf-parser = "0.12.3"
ttf_word_wrap = "0.5.0"

